<resources>
    <string name="app_name">Analogue Clock</string>
    <string name="timer">Timer</string>
    <string name="settings">Settings</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="select_color">SELECT COLOR</string>
    <string name="hour_color">Hour color</string>
    <string name="current_color">Current color:</string>
    <string name="second_color">Second color</string>
    <string name="minutes_color">Minutes color</string>
    <string name="set_timer">Set</string>
    <string name="reset_timer">Reset</string>
</resources>